--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "client:build": "cd client && npm run build",
     "client:dev": "cd client && npm run dev",
     "build": "cd client && npm run build",
-    "render-build": "npm install && npm run build && cp -r ./server/.env ./server/dist/.env"  
-  },
+    "render-build": "npm install && npm run build"  },
   "keywords": [],
   "author": "",
   "license": "ISC",
